--- a/Trycyle/app/src/main/res/layout/activity_create_account.xml
+++ b/Trycyle/app/src/main/res/layout/activity_create_account.xml
@@ -14,8 +14,8 @@
         android:layout_marginStart="80dp"
         android:layout_marginTop="98dp"
         android:ems="10"
+        android:hint="name"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -26,8 +26,8 @@
         android:layout_marginStart="76dp"
         android:layout_marginTop="39dp"
         android:ems="10"
+        android:hint="Email"
         android:inputType="textPersonName"
-        android:text="Name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
@@ -38,6 +38,7 @@
         android:layout_marginStart="72dp"
         android:layout_marginTop="39dp"
         android:ems="10"
+        android:hint="password"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email" />
